# SimpleProfiler

./: .gitmodules  Readme.md  sp.py  sp_cpu.py  sp_cuda.py  utils.py
results/: 20220820Ada.toml  20220820MPSDHpc.toml  20220820MacAir.toml  20220820MaxwellHead.toml  20220821MacAir.toml  20220821Maxwell.toml  20220821MaxwellAMD.toml  20220821MaxwellEXFL.toml  20220821MaxwellGold-6240.py  20220821MaxwellP100.toml  20220821MaxwellP100_2.toml  20220821MaxwellV100.toml  20220828CFEL.toml  20220829Dell.toml  20220829Desktop.toml  20220829Desktop2.toml  20230108Dell.toml  20230220Dell.toml  20230715Dell.toml
sci_benchmark/: CMakeLists.txt  _cython_func.pyx  cython_func.py  cython_func.pyx  numba_func.py  sci_benchmark.py
sci_benchmark/src/: main.cpp  nanobind_func.cpp  pybind11_func.cpp
